<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/ash"
    tools:context="com.udacity.yaafl.activities.FinalResultActivity">

    <android.support.v7.widget.CardView
        android:layout_alignParentTop="true"
        android:id="@+id/goalCard"
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/goal"
            android:contentDescription="@string/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/goalCard"
        android:id="@+id/goalCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/winImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@+id/winImage"
                android:layout_centerHorizontal="true"
                android:id="@+id/winningText"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_below="@+id/goalCard2"
        android:id="@+id/fabRefresh"
        ads:fabSize="normal"
        android:elevation="8dp"
        android:src="@drawable/ic_autorenew_white_36dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/pred"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:layout_below="@+id/goalCard2"
        android:id="@+id/fabShare"
        ads:fabSize="normal"
        ads:backgroundTint="#E91E63"
        android:contentDescription="@string/share"
        android:elevation="8dp"
        android:src="@drawable/ic_share_white_36dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/ads"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
