<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:contentDescription="@string/homex"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appbarhome"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/barclays"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/bpl1"
                app:layout_collapseMode="parallax" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:contentDescription="@string/scroll"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_keyboard_arrow_down_white_36dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="4dp"
                    app:fabSize="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


            <android.support.v7.widget.RecyclerView
                android:contentDescription="@string/rview1"
                android:id="@+id/homeTeamRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
